--- a/iosApp/QRShield/ar.lproj/Localizable.strings
+++ b/iosApp/QRShield/ar.lproj/Localizable.strings
@@ -449,3 +449,28 @@
 "kmp.using_mock" = "⚠️ استخدام Mock (ربط common.framework)";
 "kmp.brand" = "🛡️ QR-SHIELD";
 "format.latency" = "%dms";
+
+// MARK: - Navigation Menu Items
+"nav.menu.dashboard" = "لوحة التحكم";
+"nav.menu.dashboard_desc" = "نظرة عامة والإحصائيات";
+"nav.menu.scan_qr" = "مسح QR";
+"nav.menu.scan_qr_desc" = "ماسح الكاميرا";
+"nav.menu.scan_history" = "سجل المسح";
+"nav.menu.scan_history_desc" = "عمليات المسح السابقة";
+"nav.menu.threat_monitor" = "مراقب التهديدات";
+"nav.menu.threat_monitor_desc" = "التهديدات المباشرة";
+"nav.menu.trust_centre" = "مركز الثقة";
+"nav.menu.trust_centre_desc" = "الخصوصية والأمان";
+"nav.menu.beat_the_bot" = "تغلب على الروبوت";
+"nav.menu.beat_the_bot_desc" = "لعبة التدريب";
+"nav.menu.export_report" = "تصدير التقرير";
+"nav.menu.export_report_desc" = "إنشاء تقرير";
+"nav.menu.settings" = "الإعدادات";
+"nav.menu.settings_desc" = "التفضيلات";
+"nav.quick.scan" = "مسح";
+"nav.quick.import" = "استيراد";
+"nav.quick.paste_url" = "لصق الرابط";
+"result.block_button" = "حظر وإضافة للقائمة السوداء";
+"result.open_anyway" = "فتح على أي حال";
+"common.cancel" = "إلغاء";
+"common.close" = "إغلاق";
