fix(ios): tab bar localization + training back button fix (v1.17.51)
Tab Bar Localization:
- All 5 tab labels now use NSLocalizedString
- Dashboard, Scan, History, Training, Settings
- Translated in all 16 languages

Training Back Button Fix:
- Root cause: double-wrapped NavigationStack
- QRShieldApp wrapped BeatTheBotView in NavigationStack
- BeatTheBotView already had internal NavigationStack
- Removed outer wrapper, back button now works

Build: BUILD SUCCEEDED

--- a/iosApp/QRShield/ar.lproj/Localizable.strings
+++ b/iosApp/QRShield/ar.lproj/Localizable.strings
@@ -474,3 +474,10 @@
 "result.open_anyway" = "فتح على أي حال";
 "common.cancel" = "إلغاء";
 "common.close" = "إغلاق";
+
+// MARK: - Tab Bar Labels
+"tab.dashboard" = "لوحة التحكم";
+"tab.scan" = "مسح";
+"tab.history" = "السجل";
+"tab.training" = "التدريب";
+"tab.settings" = "الإعدادات";
